--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,13 @@
       }
     ],
     "import/prefer-default-export": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "babel-plugin-root-import": {
+        "rootPathSuffix": "src",
+        "rootPathPrefix": "~"
+      }
+    }
   }
 }
