--- a/package.json
+++ b/package.json
@@ -6,11 +6,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
     "customize-cra": "^0.9.1",
+    "history": "^4.10.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0"
+    "react-redux": "^7.2.0",
+    "react-redux-toastr": "^7.6.4",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.1.2",
+    "seamless-immutable": "^7.1.4",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
